# CMake script for pp6lib library
#
add_library(pp6lib STATIC PP6Math.hpp PP6Math.cpp PP6Menus.hpp PP6Menus.cpp PP6Day1.hpp PP6Day1.cpp PP6Day2.hpp PP6Day2.cpp PP6Day3.hpp PP6Day3.cpp ThreeVector.hpp ThreeVector.cpp FourVector.hpp FourVector.cpp Particle.hpp Particle.cpp PP6MuonAnalysis.hpp PP6MuonAnalysis.cpp FileReader.hpp FileReader.cpp)
